--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <table cellspacing="20">
     <tr>
-      <td>  <img src="C:\Users\prach\Documents\web development\HTML- personal site\prachi.png.jpg" alt="Prachi profile picture" style="width:200px;height:300px;" ></td>
+      <td>  <img src="prachi.png.jpg" alt="Prachi profile picture" style="width:200px;height:300px;" ></td>
       <td>   <h1>Prachi Kashyap</h1> <p><em>Student of<strong> <a href="https://en.wikipedia.org/wiki/Lakshmi_Narain_College_of_Technology/">Lakshmi narain college of technlogy</a></strong></em></p>
       <p> I am from electronics and communication branch. I completed by bachelor of engineering from lakshmi narain college of technology. I love travelling.</p>
       <hr></td>
